--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
+* {
+  box-sizing: border-box;
+}
 
 body {
   width: 90%;
   margin: 0 auto;
-  box-sizing: border-box;
   text-align: center;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .content {
@@ -24,11 +27,15 @@ body {
   width: 31.3%;
   float: left;
   margin: 1%;
+  overflow: scroll;
+}
+
+.gallery-column h3 {
+  font-size: 1.2em;
 }
 
 .nutrition-column {
   margin-right: 0%;
-
 }
 
 li {
