--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@ body {
   box-sizing: border-box;
   background-color: #ffe53b;
   color: #222f8d;
-  text-align: center;
   width: 90%;
   margin: 0 auto;
   font-family: 'Ubuntu', sans-serif;
+  text-align: center;
 }
 
 .header img {
@@ -21,9 +21,6 @@ body {
   padding: 0.5em 0;
 }
 
-.nav ul {
-  margin-left: 22%;
-}
 
 .nav li {
   display: inline;
@@ -81,24 +78,22 @@ h3 {
   padding: 10px;
   margin: 0px;
   background-color: #efefef;
+  text-align: center;
 }
 
-h4 {
+.recipe-column h4 {
   text-decoration: underline;
+  text-align: left;
+  font-size: 1.1em;
 }
 
-.fun-column {
-  margin-right: 0%;
-}
 
 .recipe-column h4, ul, ol {
-  text-align: left;
   margin-left: 3%;
   color: #222f8d;
 }
 
 .recipe-column h4 {
-  font-size: 1.1em;
 }
 
 .recipe-column p {
@@ -108,6 +103,7 @@ h4 {
 
 .recipe-column li {
   margin: 2% 1%;
+  text-align: left;
 }
 
 .recipe-column ul li:nth-last-child(2):hover {
@@ -117,4 +113,23 @@ h4 {
 .recipe-column ul li:nth-last-child(2)::after {
   content: " *  <-- Don't leave this out!";
   color: red;
+}
+.fun-column {
+  margin-right: 0%;
+  overflow: hidden;
+}
+
+.fun-column td, th {
+  border: 2px solid #999;
+  padding: 10px 2px;
+}
+
+.fun-column thead {
+  background-color: #ffe53b;
+  font-weight: bold;
+}
+
+.fun-column tr:nth-child(2n) {
+  background-color: #222f8d;
+  color: #ffe53b;
 }
